--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-navigation-menu": "^1.2.14",
     "@radix-ui/react-slot": "^1.2.4",
+    "@reduxjs/toolkit": "^2.11.0",
     "@splidejs/react-splide": "^0.7.12",
     "@tailwindcss/vite": "^4.1.17",
     "class-variance-authority": "^0.7.1",
@@ -21,7 +22,10 @@
     "lucide-react": "^0.554.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hook-form": "^7.66.1",
+    "react-redux": "^9.2.0",
     "react-router": "^7.9.6",
+    "redux-persist": "^6.0.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17"
   },
