--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.67.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-modal": "^3.16.3",
     "react-redux": "^9.2.0",
     "react-router": "^7.9.6",
